<resources>
    <string name="app_name">My Dice Roller</string>
    <string name="roll_label">Roll</string>
    <string name="count_label">Count up</string>
    <string name="reset_label">reset</string>
    <string name="display_dialog">Display Dialog</string>
    <string name="documents">Documents</string>
    <string name="videos">Videos</string>
    <string name="musics">Musics</string>
    <string name="menu_add">Add</string>
    <string name="men_delete">Delete</string>
    <string name="menu_mail">Mail</string>
    <string name="title_hello">Hello World</string>
    <string name="content">Android / Kotlin Training</string>
    <string name="text_button">Click me</string>
    <string name="hint">hint...</string>
    <string name="second_edit_text">Second Edit Text</string>
    <string name="toolbar_favorite">Favorite</string>
    <string name="toolbar_delete">Delete</string>
</resources>
